--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">DogsLoversApp</string>
     <string name="helper_text">nombre@email.com</string>
     <string name="password">Password</string>
+    <string name="razaIn">Raza</string>
+    <string name="action_search">Search</string>
+    <string name="searchbar_hint">que raza buscas ?</string>
 </resources>
